# Magic-Key-Assistant

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  GET_STARTED.md  INSTALLATION.md  LICENSE  MagicKeyAssistant.spec  README.md  SECURITY.md  build_portable_release.ps1  build_wheelhouse.ps1  config.py  docker-compose.yml  install_dependencies.ps1  installer.iss  launcher.py  pyproject.toml  requirements.txt  ruff.toml  start.py  system_cli.py  tray.py  version_info.py  wheelhouse-constraints.txt
LeisureLLM/: .env.example  .gitignore  SetupDatabase_SQLite.ps1  StartBot.bat  database.py  leisureLLM.py  models.py  requirements.txt  run_migration_sqlite.py  ux_helpers.py
docs/: PUBLISHING_CHECKLIST.md
tests/: __init__.py  conftest.py  test_admin_gui.py  test_agentic_features.py  test_alpha_patch.py  test_answer_self_assessment.py  test_autonomous_ops.py  test_chat_pipeline.py  test_chunk_enrichment.py  test_continuity.py  test_corpus_interrogator.py  test_feedback_learning_loop.py  test_fill_gaps_fallback.py  test_hyde_retrieval.py  test_inbox.py  test_inbox_recovery_web_mode.py  test_job_registry.py  test_knowledge_gap_tracker.py  test_knowledge_health.py  test_migration_runner.py  test_model_router.py  test_operational_audit_trail.py  test_operational_continuity_regression_harness.py  test_operational_continuity_service.py  test_operational_continuity_web_mode.py  test_operational_extraction_proposals.py  test_operational_extraction_proposals_api.py  test_operational_provenance_api.py  test_operational_records.py  (+14 more)
(+245 files in other folders)
